[package]
name = "rulox-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
rulox-core = { path = "../rulox-core" }
serde = { version = "1.0.130", features = ["derive", "rc"] }